--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NodeJS file manager",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "node src/index.js --username=antiqqt"
   },
   "keywords": [],
   "author": "antiqqt",
